updated title/resume name and added country code to phone number

--- a/Resume.html
+++ b/Resume.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>General Resume</title>
+    <title>Demi_Olagoke_Resume</title>
     <link rel="stylesheet" href="resume.css"/>
 </head>
 
@@ -14,7 +14,7 @@
     </div>
     <div id="contact_info_div">
       <span class="contact_info_tag">Email:&nbsp;&nbsp;&nbsp;&nbsp;</span> <span class="contact_info">demilade.olagoke@gmail.com</span><br>
-      <span class="contact_info_tag">Phone:</span> <span class="contact_info">(213)-800-4730</span><br>
+      <span class="contact_info_tag">Phone:</span> <span class="contact_info">+1(213)-800-4730</span><br>
       <span class="contact_info_tag">GitHub:</span> <span class="contact_info">github.com/Demi-O</span><br>
       <span class="contact_info_tag">LinkedIn:</span> <span class="contact_info">linkedin.com/in/demi-olagoke-58325747</span>
     </div>
