added Block/Tidal experience

--- a/Resume.html
+++ b/Resume.html
@@ -26,7 +26,6 @@
   <div class="subsection_paragraph_div">
     <ul>
       <li>Senior Backend Engineer experienced with high volume consumer applications, most notably Tinder</li>
-      <li>Looking for opportunities after taking a refreshing period to focus on personal goals</li>
     </ul>
   </div>
 
@@ -35,14 +34,23 @@
   </div>
   <div class="subsection_paragraph_div">
     <ul>
-      <li><span class="colon_list">Languages</span>: Javascript/Typescript, Python, Java, C#, SQL, HTML/CSS</li>
-      <li><span class="colon_list">Server-Side Technologies</span>: Node.js, Express, FastAPI, AWS (S3, DynamoDB, ElastiCache, Lambda, Media Convert, CloudFront, EC2), MongoDB, PostgreSQL, Apache Kafka, Debezium, Strapi, Docker, Kubernetes, Prometheus, Grafana, Railway, Ngrok</li>
-      <li><span class="colon_list">Collaboration Tools</span>: Git, Jira, Confluence</li>
+      <li><span class="colon_list">Languages</span>: Javascript/Typescript, Java, Python, C#, SQL, HTML/CSS</li>
+      <li><span class="colon_list">Server-Side Technologies</span>: Node.js, Express, Spring Boot, FastAPI, gRPC, AWS (S3, DynamoDB, ElastiCache, Lambda, Media Convert, CloudFront, EC2), MongoDB, PostgreSQL, Apache Kafka, Strapi, Docker, Kubernetes, Prometheus, Grafana, Datadog, Railway, Ngrok</li>
+      <li><span class="colon_list">Collaboration Tools</span>: Git, Jira, Confluence, Notion</li>
     </ul>
   </div>
 
   <div class="section_head">
     Experience
+  </div>
+  <div class="job">
+    <span class="subsection_head">Block</span>
+    <span class = subsection_role>Software Engineer (L5), Backend</span>
+    <span class="subsection_details">New York, NY | May 2024 - Present</span>
+    <ul>
+      <li>Contributed to the creation and launch of TIDAL Fan Base</li>
+      <li>Implemented and exposed APIs to power features such as account auto-linking and fan creation-source tagging</li>
+    </ul>
   </div>
   <div class="job">
     <span class="subsection_head">Tinder</span>
@@ -53,10 +61,10 @@
       <li>Owned parts of products such as video transcoding for Swipe Night videos, and the interactions service for Fast Chat</li>
       <li>Transitioned pairing service for fast chats to an <span class="colon_list">event-driven architecture</span>, enabling concurrent release in <span class="colon_list">20+ countries</span></li>
       <li>Transitioned transcoding service to AWS Media Convert, saving <span class="colon_list">weeks</span> on content processing (<span class="colon_list">~85%</span> reduction)</li>
-      <li>Designed microservices, documented, handled security and operations reviews, set up infrastructure, and planned releases</li>
       <li>Led cross-functional efforts with engineering and non-engineering teams to successfully release products and experiments</li>
       <li>Contributed to creating and launching products like Explore, Swipe Night, Fast Chat, Festival Mode, to <span class="colon_list">millions of users</span></li>
       <li>Mentored junior engineers, ensuring their professional development goals were met while also contributing to the team</li>
+      <li>Designed microservices, handled security and operations reviews, set up infrastructure, and planned releases</li>
     </ul>
   </div>
   <div class="coop_job">
@@ -79,16 +87,7 @@
       <li>Created an invite system where invited users could sign up and instantly receive the money sent to them</li>
     </ul>
   </div>
-  <div class="coop_job">
-    <span class="subsection_head">University of Waterloo</span>
-    <span class = subsection_role>Undergraduate Research Assistant</span>
-    <span class="subsection_details"> Waterloo, ON | May 2015 - August 2015</span>
-    <ul>
-      <li>Worked on HCI research into data exploration of geotagged information using multiple tablet devices and a tabletop</li>
-      <li>Implemented <span class="colon_list">real-time synchronization</span> between devices & HCI techniques for surfacing relevant information to users</li>
-      <li>Created summary visualizations from application logs for researchers to gain insight into user usage patterns</li>
-    </ul>
-  </div>
+  <span class="other_experience">(Additional experience available on LinkedIn)</span>
 
   <div id="push_down_projects" class ="section_head">
     Projects
@@ -103,7 +102,7 @@
       <li>Wrote scripts to handle the collection and uploading of events to the backend</li>
     </ul>
   </div>
-  <span class="other_experience">(Other projects available on LinkedIn)</span>
+  <span class="other_experience">(Additional projects available on LinkedIn)</span>
 
   <div class = "section_head">
     Education
