--- a/Resume.html
+++ b/Resume.html
@@ -49,7 +49,7 @@
     <span class="subsection_details">New York, NY | May 2024 - December 2024</span>
     <ul>
       <li>Contributed to the creation and launch of TIDAL Fan Base</li>
-      <li>Implemented and exposed APIs to power features such as account auto-linking and fan creation-source tagging</li>
+      <li>Implemented and exposed APIs to power features such as account auto-linking, and fan creation-source tagging</li>
     </ul>
   </div>
   <div class="job">
