--- a/Resume.html
+++ b/Resume.html
@@ -46,7 +46,7 @@
   <div class="job">
     <span class="subsection_head">Block</span>
     <span class = subsection_role>Software Engineer (L5), Backend</span>
-    <span class="subsection_details">New York, NY | May 2024 - December 2024</span>
+    <span class="subsection_details">New York, NY | May 2024 - Present</span>
     <ul>
       <li>Contributed to the creation and launch of TIDAL Fan Base</li>
       <li>Implemented and exposed APIs to power features such as account auto-linking, and fan creation-source tagging</li>
